<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_mahasiswa"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/tvNIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textStyle="bold"
        android:layout_below="@+id/tvJudul"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/etNIM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/masukan_nim"
        android:autofillHints=""
        android:inputType="number"
        android:layout_below="@+id/tvNIM"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:layout_below="@+id/etNIM"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints=""
        android:hint="@string/masukan_nama"
        android:inputType="textPersonName"
        android:layout_below="@+id/tvNama"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umur"
        android:textStyle="bold"
        android:layout_below="@+id/etNama"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etUmur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints=""
        android:hint="@string/masukan_umur"
        android:inputType="number"
        android:layout_below="@+id/tvUmur"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hapus"
            android:layout_weight="0.5" />

    </LinearLayout>

</RelativeLayout>
